--- a/TTE/TTE_v1.ipynb
+++ b/TTE/TTE_v1.ipynb
@@ -4,12 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **TTE_v1: Convert R Codes into Python**\n",
     "## **1. Setup**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +177,7 @@
       "Model:                          Logit   Df Residuals:                      723\n",
       "Method:                           MLE   Df Model:                            1\n",
       "Date:                Sun, 09 Mar 2025   Pseudo R-squ.:                 0.09696\n",
-      "Time:                        15:42:04   Log-Likelihood:                -356.57\n",
+      "Time:                        16:39:33   Log-Likelihood:                -356.57\n",
       "converged:                       True   LL-Null:                       -394.86\n",
       "Covariance Type:            nonrobust   LLR p-value:                 2.120e-18\n",
       "==============================================================================\n",
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +262,7 @@
       "Model:                          Logit   Df Residuals:                      723\n",
       "Method:                           MLE   Df Model:                            1\n",
       "Date:                Sun, 09 Mar 2025   Pseudo R-squ.:                 0.02676\n",
-      "Time:                        15:42:52   Log-Likelihood:                -196.70\n",
+      "Time:                        16:39:36   Log-Likelihood:                -196.70\n",
       "converged:                       True   LL-Null:                       -202.11\n",
       "Covariance Type:            nonrobust   LLR p-value:                  0.001007\n",
       "==============================================================================\n",
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +342,7 @@
       "Model:                          Logit   Df Residuals:                      723\n",
       "Method:                           MLE   Df Model:                            1\n",
       "Date:                Sun, 09 Mar 2025   Pseudo R-squ.:                 0.02676\n",
-      "Time:                        15:43:28   Log-Likelihood:                -196.70\n",
+      "Time:                        16:39:39   Log-Likelihood:                -196.70\n",
       "converged:                       True   LL-Null:                       -202.11\n",
       "Covariance Type:            nonrobust   LLR p-value:                  0.001007\n",
       "==============================================================================\n",
@@ -422,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,9 +541,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Switch weights and/or censor weights have not been estimated. Run set_switch_weight_model and set_censor_weight_model first.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[81], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Calculate weights\u001b[39;00m\n\u001b[1;32m      2\u001b[0m trial_pp \u001b[38;5;241m=\u001b[39m trial_pp\u001b[38;5;241m.\u001b[39mcalculate_weights()\n\u001b[0;32m----> 3\u001b[0m trial_itt \u001b[38;5;241m=\u001b[39m \u001b[43mtrial_itt\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalculate_weights\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[80], line 47\u001b[0m, in \u001b[0;36mTrialSequence.calculate_weights\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Ensures that weights are properly estimated before proceeding.\"\"\"\u001b[39;00m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mswitch_weights \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcensor_weights \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m---> 47\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSwitch weights and/or censor weights have not been estimated. Run set_switch_weight_model and set_censor_weight_model first.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     48\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n",
+      "\u001b[0;31mValueError\u001b[0m: Switch weights and/or censor weights have not been estimated. Run set_switch_weight_model and set_censor_weight_model first."
+     ]
+    }
+   ],
    "source": [
     "# Calculate weights\n",
     "trial_pp = trial_pp.calculate_weights()\n",
@@ -551,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +581,7 @@
       "Model:                          Logit   Df Residuals:                      723\n",
       "Method:                           MLE   Df Model:                            1\n",
       "Date:                Sun, 09 Mar 2025   Pseudo R-squ.:                 0.09696\n",
-      "Time:                        15:55:38   Log-Likelihood:                -356.57\n",
+      "Time:                        16:39:57   Log-Likelihood:                -356.57\n",
       "converged:                       True   LL-Null:                       -394.86\n",
       "Covariance Type:            nonrobust   LLR p-value:                 2.120e-18\n",
       "==============================================================================\n",
@@ -583,7 +597,7 @@
       "Model:                          Logit   Df Residuals:                      723\n",
       "Method:                           MLE   Df Model:                            1\n",
       "Date:                Sun, 09 Mar 2025   Pseudo R-squ.:                 0.02676\n",
-      "Time:                        15:55:38   Log-Likelihood:                -196.70\n",
+      "Time:                        16:39:57   Log-Likelihood:                -196.70\n",
       "converged:                       True   LL-Null:                       -202.11\n",
       "Covariance Type:            nonrobust   LLR p-value:                  0.001007\n",
       "==============================================================================\n",
@@ -598,7 +612,7 @@
    "source": [
     "# Show weight models\n",
     "trial_itt.show_weight_models()\n",
-    "trial_pp.show_weight_models()\n"
+    "trial_pp.show_weight_models()"
    ]
   },
   {
@@ -613,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -623,41 +637,13 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[53], line 30\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m model\n\u001b[1;32m     29\u001b[0m \u001b[38;5;66;03m# Set outcome models for PP and ITT trials\u001b[39;00m\n\u001b[0;32m---> 30\u001b[0m \u001b[43mtrial_pp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_outcome_model\u001b[49m()\n\u001b[1;32m     31\u001b[0m trial_itt\u001b[38;5;241m.\u001b[39mset_outcome_model(adjustment_terms\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx2\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
+      "Cell \u001b[0;32mIn[84], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Apply outcome model to trial sequences\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mtrial_pp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_outcome_model\u001b[49m()\n\u001b[1;32m      3\u001b[0m trial_itt\u001b[38;5;241m.\u001b[39mset_outcome_model(adjustment_terms\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mx2\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'TrialSequence' object has no attribute 'set_outcome_model'"
      ]
     }
    ],
    "source": [
-    "import statsmodels.api as sm\n",
-    "\n",
-    "class TrialSequence:\n",
-    "    def __init__(self, estimand, data, id_col, period_col, treatment_col, outcome_col, eligible_col):\n",
-    "        self.estimand = estimand\n",
-    "        self.data = data\n",
-    "        self.id_col = id_col\n",
-    "        self.period_col = period_col\n",
-    "        self.treatment_col = treatment_col\n",
-    "        self.outcome_col = outcome_col\n",
-    "        self.eligible_col = eligible_col\n",
-    "        self.outcome_model = None\n",
-    "\n",
-    "    def set_outcome_model(self, adjustment_terms=None):\n",
-    "        \"\"\"\n",
-    "        Fits an outcome model using logistic regression.\n",
-    "        :param adjustment_terms: List of covariates to adjust for.\n",
-    "        \"\"\"\n",
-    "        X = self.data[[self.treatment_col]]  # Start with treatment as predictor\n",
-    "        if adjustment_terms:\n",
-    "            X = self.data[[self.treatment_col] + adjustment_terms]  # Add adjustment terms\n",
-    "        X = sm.add_constant(X)  # Add intercept\n",
-    "        y = self.data[self.outcome_col]\n",
-    "\n",
-    "        model = sm.Logit(y, X).fit(disp=False)\n",
-    "        self.outcome_model = model\n",
-    "        return model\n",
-    "\n",
-    "# Set outcome models for PP and ITT trials\n",
+    "# Apply outcome model to trial sequences\n",
     "trial_pp.set_outcome_model()\n",
     "trial_itt.set_outcome_model(adjustment_terms=[\"x2\"])\n"
    ]
