--- a/TTE/TTE_gisendnisam.ipynb
+++ b/TTE/TTE_gisendnisam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Set working directory to the script's directory\n",
-    "os.chdir(os.path.dirname(os.path.abspath(\"../data/data_censored.csv\")))\n",
+    "os.chdir(os.path.dirname(os.path.abspath(_file_)))\n",
     "\n",
     "# --------------- DATA PREPARATION ---------------\n",
     "\n",
