i forgot to cmd s...

--- a/TTE/TTE-v1.ipynb
+++ b/TTE/TTE-v1.ipynb
@@ -14,7 +14,23 @@
     "\n",
     "A marginal structural model (MSM) is fitted to estimate causal effects. Predictions, such as survival probabilities and cumulative incidences, are generated for different treatment scenarios. Finally, the results are visualized, illustrating survival differences over time, which allows for meaningful inference on the treatment effects.\n",
     "\n",
+    "---\n",
     "\n",
+    "## **Table of Contents**\n",
+    "1. Setup\n",
+    "2. Data Preparation \n",
+    "3. Weight Models and Censoring <br>\n",
+    "    3.1. Censoring due to Treatment Switching <br>\n",
+    "    3.2. Other Informative Censoring\n",
+    "4. Calculate Weights\n",
+    "5. Specify Outcome Model\n",
+    "6. Expand Trials <br>\n",
+    "    6.1. Create Sequence of Trials Data\n",
+    "7. Load or Sample from Expanded Data\n",
+    "8. Fit Marginal Structural Model (MSM)\n",
+    "9. Inference <br>\n",
+    "\n",
+    "---\n",
     "## **1. Setup**"
    ]
   },
